[package]
name = "koko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["dylib"]

[dependencies]
lazy_static = "1.4"
ureq = {version = "2.4", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.5"
cache_control = "0.2.0"
sha1 = "0.10.1"
libc = "0.2.119"

